<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="title">Eletric Car</string>
    <string name="car">Carros</string>
    <string name="favorites">favoritos</string>
    <string name="price">Preço</string>
    <string name="battery">Bateria</string>
    <string name="power">Potência</string>
    <string name="refill">Recarga</string>
    <string name="price_kwh">Preço Kwh</string>
    <string name="km_travelled">km percorridos</string>
    <string name="calculate">calcular</string>
    <string name="noWifiConnection">Ops! Parece que você está sem internet.</string>
    <string name="response_error"> Algo de errado, por faveor tente mais tarde.</string>
    <string name="saved_calc">saved_calc</string>
    <string name="string_calculate">calculate</string>

</resources>
