<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cv_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_star"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/tesla_eletric_car"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_price_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="R$ 300.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_battery"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/battery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_battery_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="24dp"
                android:text="300 KWh"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_power"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/power"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_battery" />

            <TextView
                android:id="@+id/tv_power_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="24dp"
                android:text="646 cv"
                app:layout_constraintStart_toEndOf="@id/tv_battery"
                app:layout_constraintTop_toBottomOf="@id/tv_battery" />

            <TextView
                android:id="@+id/tv_refill"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/refill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_power" />

            <TextView
                android:id="@+id/tv_refill_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="30 min"
                app:layout_constraintStart_toEndOf="@id/tv_refill"
                app:layout_constraintTop_toBottomOf="@id/tv_power"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>